api/crates/postgres/tests/integration/tags/snapshots/integration__tags__update_by_id____test_context_wrapped_fails.snap
---
source: crates/postgres/tests/integration/tags/update_by_id.rs
expression: ctx.queries()
---
[[queries]]
sql = '''
SELECT
  "id",
  "name",
  "kana",
  "aliases",
  "created_at",
  "updated_at"
FROM
  "tags"
WHERE
  "id" = $1
FOR UPDATE'''
rows_affected = 0
rows_returned = 0
